lilv (0.22.1) unstable;

  * Fix Python bindings
  * Fix documentation installation
  * Fix outdated comment references to lilv_uri_to_path()

 -- David Robillard <d@drobilla.net>  Wed, 28 Oct 2015 14:31:05 -0400

lilv (0.22.0) stable;

  * Fix loading files with spaces in their path
  * Add lilv_file_uri_parse() for correct URI to path conversion
  * Add lilv_node_get_path() for convenient file URI path access
  * Add lilv_state_emit_port_values() for special port value handling
  * Add lilv_state_get_uri()
  * Add lilv_state_delete() for deleting user saved presets
  * Add lilv_free() for systems picky about such things
  * Fix lilv_world_ask() to work with wildcards
  * Fix creation of duplicate manifest entries when saving state
  * Fix bindings for Python 3
  * Load discovered owl ontologies as specifications
  * Expose lilv_world_load_specifications() and
    lilv_world_load_plugin_classes()
  * Tolerate passing NULL to lilv_state_restore()
  * Preserve absolute paths in state if no link directory is given
  * Fix a few minor/unlikely memory errors
  * Configure based on compiler target OS for cross-compilation
  * Fix lilv_realpath() on pre-POSIX-2008 systems
  * Fix directory walking on some systems (thanks Matt Fischer)
  * Windows fixes (thanks John Emmas)
  * Minor documentation improvements
  * Upgrade to waf 1.8.14

 -- David Robillard <d@drobilla.net>  Thu, 08 Oct 2015 15:39:29 -0400

lilv (0.20.0) stable;

  * Don't load files multiple times if they are listed as rdfs:seeAlso for
    several plugins
  * Call lv2_lib_descriptor separately for different bundle paths
    (fix loading several dynamic plugins like Ingen at once)
  * Tolerate calling lilv_node_as_uri or lilv_node_as_blank on NULL
  * Add convenient lilv_new_file_uri for creating file URIs
  * Fix use of lv2info -m and -p options to write plugin data
    (useful for porting plugins bridges with NASPRO)
  * Fix issues with lilv_plugin_get_author_name and friends
    (thanks Filipe Coelho)