@@ -1,10 +1,12 @@
 lilv (0.22.1) unstable;
 
+  * Unload contained resources when bundle is unloaded
+  * Support re-loading plugins
   * Fix Python bindings
   * Fix documentation installation
   * Fix outdated comment references to lilv_uri_to_path()
 
- -- David Robillard <d@drobilla.net>  Wed, 28 Oct 2015 14:31:05 -0400
+ -- David Robillard <d@drobilla.net>  Thu, 29 Oct 2015 00:23:04 -0400
 
 lilv (0.22.0) stable;
 
